# biodiversity-data-ingestion

./: .gitignore  README.md
airflow/: values.yaml
airflow/dags/: aegis_metadata_dag.py  biodiversity_data_dag.py  biodiversity_metadata_dag.py  (+3 more)
beam/: Dockerfile  aegis_etl.json  main.py  metadata.json  pyproject.toml  requirements.txt  setup.py
beam/src/dependencies/: aegis_launcher.py  aegis_main.py  aegis_pipeline.py  aegis_transforms.py  launcher.py  my_pipeline.py
beam/src/dependencies/elasticsearch_settings/: aegis_settings.json  data_portal.mapping.json
beam/src/dependencies/utils/: common_functions.py  map_functions.py  schemas.py  write_to_elasticsearch.py
data_ingestion/: Dockerfile  README.md  main.py  metadata_cleaning_occs.json  metadata_data_provenance.json  metadata_occurrences.json  metadata_range_estimation.json  metadata_spatial_annotation.json  metadata_taxonomy.json  pyproject.toml  requirements.txt
data_ingestion/src/dependencies/: biogeo_summary_pipeline.py  cleaning_occs_pipeline.py  cleaning_summary_pipeline.py  climate_summary_pipeline.py  data_provenance_launcher.py  data_provenance_pipeline.py  launcher.py  occurrences_launcher.py  occurrences_pipeline.py  range_estimation_launcher.py  range_estimation_pipeline.py  spatial_annotation_pipeline.py  taxonomy_launcher.py  taxonomy_pipeline.py
data_ingestion/src/dependencies/utils/: bq_gbif_occurrences_schema.json  bq_metadata_url_schema.json  bq_spatial_annotation_schema.json  bq_spatial_annotation_summ_schema.json  bq_taxonomy_schema.json  cleaning_occs.py  helpers.py  transforms.py
(+45 files in other folders)
