[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "biodiversity-data-ingestion"
version = "1.0.0"
dependencies = [
  "apache-beam[gcp]==2.62.0",
  "lxml",
  "elasticsearch==8.15.1",
  "google-cloud-secret-manager"
]

[tool.setuptools]
packages = ["dependencies"]

[tool.setuptools.package-dir]
"" = "src"